    - proper resizing
    - proper calculation of hit area
  * fixed mouse button code & don't move stage when running code (Ignacio)
  * Don't allow text in number blocks
  * expand blocks horizontally (for long labels)
  * add value display to math blocks
  * add value to boolean blocks
  * add default args to math blocks (Ignacio)
  * fine tune value display positioning 
  * fix problem with action block collapsed bounds
0.3
  * major refactoring of block handling to better compartmentalize the code
  * blocks in a stack being dragged should be on top of everything else
  * refactoring of input for Android (Sam Parkinson)
0.4
  * fixed collapse bug which manifests itself when loading custom stacks
  * use ellipsis on action and do labels (including do blocks in palette)

TODO:
  * music blocks plugin
  * save errors
  * display rubrics
  * more efficient until and while?
  * save to javascript
  * RTL support
  * zoom and scroll?
  * use graphical error messages
  * make expand an array, one element for each arg or slot
  * user-defined block types (trivial with factory)
  * three-arg flow blocks (trivial with factory)
  * three-arg arg blocks (trivial with factory)
  * write SVG generator
  * artwork beautification?
  * try to detect difference between unknown flow and arg blocks
  * button block (a stack that is run when you click on a button)
    - two args: artwork for the button; action name to take
  * maybe we want to add local variables? (e.g., boxes only defined inside an action)
  * pass argments to actions? (and arg blocks to reference them)?
  * auto-guestimate block width (need to set label name before creating artwork)

KNOWN BUGS:
  * sample projects cannot be shown on Android
  * don't save full-sized bitmap to session
  * find a scalable approach to drawing on the canvas
  * fix race conditions
  * not all blocks highlight when using step-by-step mode
  * fix regression in loading macros (NaN)
  * fix layout problem in boxes palette